--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,1 @@
-google_site_verification: <meta name="google-site-verification" content="2p61W3MmPNtQPxZ7sFU5Mnp_6KrCQdwrC5WLDnXutRc" />
+<meta name="google-site-verification" content="2p61W3MmPNtQPxZ7sFU5Mnp_6KrCQdwrC5WLDnXutRc" />
